pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constMethod2.pkl
function bar() = "bar"

class Foo {
  bar: String = module.bar()
}

foo: Foo = new {}
